Second try: Add a License with the same license as perl has
For this second version I've used the module ExtUtils::MakeMaker
and the various descriptions about this module.

Signed-off-by: Werner Fink <werner@suse.de>

--- a/META.yml
+++ b/META.yml
@@ -1,10 +1,22 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Data-Diver
-version:      1.00_02
-version_from: Diver.pm
-installdirs:  site
+---
+abstract: unknown
+author:
+  - 'Tye McQueen <tyemq@cpan.org>'
+build_requires:
+  ExtUtils::MakeMaker: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.6302, CPAN::Meta::Converter version 2.120630'
+license: perl
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Data-Diver
+no_index:
+  directory:
+    - t
+    - inc
 requires:
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+  Test::More: 0
+version: 1.0102
